--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="about">
 				<h3 class="accent">Easy Profile</h3>
 				<h2>Bootstrap v3.3.5</h2>
-				<p>Welcome to my personal webpage. I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
+				<p>Welcome to my personal webpage. I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting.</p>
 			</div>
 		</div>
 		<div class="col-md-6 col-sm-12">
@@ -87,10 +87,10 @@ http://www.templatemo.com/tm-467-easy-profile
 								<h5>Govt Hihg School Mupliyam</h5><span></span>
 								<h5>1989 June - 1999 March</h5>
 							</div>
-						<p class="education-description">I hold a Diploma in Computer Application and Business Management, along with a Bachelor’s degree in Commerce (B.Com). I am a certified CCNA and RHCE professional, with additional coursework completed in CCNP, VMware, and AWS.</p>
-					</div>
-			</div>
-		</div>
+						<p class="education-description">I hold a Diploma in Computer Application and Business Management, along with a Bachelor’s degree in Commerce (B.Com). I am a certified CCNA and RHCE professional, with additional coursework completed in CCNP, VMware, and AWS. With hands-on experience as a System Administrator since 2011, I have developed a strong foundation in Linux systems and a deep passion for DevOps practices.</p>
+                      </div>
+                </div>
+	        </div>
 		<div class="col-md-4 col-sm-12">
 			<div class="languages">
 				<h2>Languages</h2>
@@ -99,7 +99,7 @@ http://www.templatemo.com/tm-467-easy-profile
 						<li>Malayalam </li>
 						<li>Hindi </li>
 						<li>Tamil </li>
-					</ul>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -124,7 +124,7 @@ http://www.templatemo.com/tm-467-easy-profile
 						<h4 class="experience-title accent">Linux administrator</h4>
 						<h5>Quintet Solutions</h5><span></span>
 						<h5>2011 January - Present</h5>
-						<p class="education-description">With hands-on experience as a System Administrator since 2011, I have developed a strong foundation in Linux systems and a deep passion for DevOps practices. My background reflects a solid blend of technical certifications and real-world experience, positioning me well for roles that demand expertise in system infrastructure, cloud platforms, and automation.</p>
+						<p class="education-description">My background reflects a solid blend of technical certifications and real-world experience, positioning me well for roles that demand expertise in system infrastructure, cloud platforms, and automation.</p>
 					</div>
 			</div>
 		</div>
