--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ http://www.templatemo.com/tm-467-easy-profile
 				<img src="images/tm-easy-profile.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
 				<h1 class="tm-title bold shadow">Hi, I am Sreenath</h1>
-				<h1 class="white bold shadow">Creative Devops Administrator</h1>
+				<h1 class="white bold shadow">Devops Administrator</h1>
 			</div>
 		</div>
 	</div>
@@ -46,29 +46,29 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="about">
 				<h3 class="accent">Easy Profile</h3>
 				<h2>Bootstrap v3.3.5</h2>
-				<p>Welcome to my personal webpage. I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting.</p>
+				<p>Welcome to my personal sample webpage. I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. There are 4 color themes, <a href="index-green.html">Green</a>, <a href="index.html">Blue</a>, <a href="index-gray.html">Gray</a>, and <a href="index-orange.html">Orange</a>. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
 			</div>
 		</div>
 		<div class="col-md-6 col-sm-12">
 			<div class="skills">
 				<h2 class="white">Skills</h2>
-				<strong>Linux</strong>
-				<span class="pull-right">70%</span>
+				<strong>Devops</strong>
+				<span class="pull-right">75%</span>
 					<div class="progress">
 						<div class="progress-bar progress-bar-primary" role="progressbar" 
-                        aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
 					</div>
-				<strong>Server Administrotion</strong>
+				<strong>Linux</strong>
 				<span class="pull-right">85%</span>
 					<div class="progress">
 						<div class="progress-bar progress-bar-primary" role="progressbar" 
                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 					</div>
-				<strong>Devops</strong>
-				<span class="pull-right">80%</span>
+				<strong>System Administration</strong>
+				<span class="pull-right">95%</span>
 					<div class="progress">
 						<div class="progress-bar progress-bar-primary" role="progressbar" 
-                        aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+                        aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
 					</div>
 			</div>
 		</div>
@@ -84,22 +84,22 @@ http://www.templatemo.com/tm-467-easy-profile
 					<div class="education-content">
 						<h4 class="education-title accent">New Web Design</h4>
 							<div class="education-school">
-								<h5>Govt Hihg School Mupliyam</h5><span></span>
-								<h5>1989 June - 1999 March</h5>
+								<h5>School of Media</h5><span></span>
+								<h5>1989 January - 1999 December</h5>
 							</div>
-						<p class="education-description">I hold a Diploma in Computer Application and Business Management, along with a Bachelor’s degree in Commerce (B.Com). I am a certified CCNA and RHCE professional, with additional coursework completed in CCNP, VMware, and AWS. With hands-on experience as a System Administrator since 2011, I have developed a strong foundation in Linux systems and a deep passion for DevOps practices.</p>
-                      </div>
-                </div>
-	        </div>
+						<p class="education-description">I hold a Diploma in Computer Application and Business Management, along with a Bachelor’s degree in Commerce (B.Com). I am a certified CCNA and RHCE professional, with additional coursework completed in CCNP, VMware, and AWS. With hands-on experience as a System Administrator since 2011.</p>
+					</div>
+			</div>
+		</div>
 		<div class="col-md-4 col-sm-12">
 			<div class="languages">
 				<h2>Languages</h2>
 					<ul>
-						<li>English </li>
-						<li>Malayalam </li>
-						<li>Hindi </li>
-						<li>Tamil </li>
-				</ul>
+						<li>Malayalam / Read,Write,Speak</li>
+						<li>English / Read,Write,Speak</li>
+						<li>Hindi / Read,Write,Speak</li>
+						<li>Tamil / Speak</li>
+					</ul>
 			</div>
 		</div>
 	</div>
@@ -111,20 +111,20 @@ http://www.templatemo.com/tm-467-easy-profile
 		<div class="col-md-4 col-sm-12">
 			<div class="contact">
 				<h2>Contact</h2>
-					<p><i class="fa fa-map-marker"></i> T1 - 12, Ngo Quarters Kalleppully</p>
-					<p><i class="fa fa-phone"></i> 9061540244</p>
+					<p><i class="fa fa-map-marker"></i> T1 12, NGO Kalleppully, Palakkad</p>
+					<p><i class="fa fa-phone"></i> 906-154-0244</p>
 					<p><i class="fa fa-envelope"></i> sreenathemail@gmail.com</p>
-					<p><i class="fa fa-globe"></i> quintetsolution.com</p>
+					<p><i class="fa fa-globe"></i> www.quintetsolutions.com</p>
 			</div>
 		</div>
 		<div class="col-md-8 col-sm-12">
 			<div class="experience">
 				<h2 class="white">Experiences</h2>
 					<div class="experience-content">
-						<h4 class="experience-title accent">Linux administrator</h4>
-						<h5>Quintet Solutions</h5><span></span>
+						<h4 class="experience-title accent">LinuxSystem Administration</h4>
+						<h5>Quintetsolutions</h5><span></span>
 						<h5>2011 January - Present</h5>
-						<p class="education-description">My background reflects a solid blend of technical certifications and real-world experience, positioning me well for roles that demand expertise in system infrastructure, cloud platforms, and automation.</p>
+						<p class="education-description">I have developed a strong foundation in Linux systems and a deep passion for DevOps practices. My background reflects a solid blend of technical certifications and real-world experience, positioning me well for roles that demand expertise in system infrastructure, cloud platforms, and automation.</p>
 					</div>
 			</div>
 		</div>
@@ -136,7 +136,7 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<p>Copyright &copy; Profile</p>
+				<p>Copyright &copy; 2084 Your Easy Profile</p>
 				<ul class="social-icons">
 					<li><a href="#" class="fa fa-facebook"></a></li>
                     <li><a href="#" class="fa fa-google-plus"></a></li>
