modified index.html and image

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="row">
 		<div class="col-md-6 col-sm-12">
 			<div class="about">
-				<h3 class="accent">Easy Profile</h3>
-				<h2>Bootstrap v3.3.5</h2>
-				<p>Welcome to my personal sample webpage. I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. There are 4 color themes, <a href="index-green.html">Green</a>, <a href="index.html">Blue</a>, <a href="index-gray.html">Gray</a>, and <a href="index-orange.html">Orange</a>. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
+				<h3 class="accent">WELCOME TO</h3>
+				<h2>My personal sample webpage</h2>
+				<p>I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. There are 4 color themes, <a href="index-green.html">Green</a>, <a href="index.html">Blue</a>, <a href="index-gray.html">Gray</a>, and <a href="index-orange.html">Orange</a>. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
 			</div>
 		</div>
 		<div class="col-md-6 col-sm-12">
