--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ http://www.templatemo.com/tm-467-easy-profile
 					<div class="education-content">
 						<h4 class="education-title accent">New Web Design</h4>
 							<div class="education-school">
-								<h5>School of Media</h5><span></span>
-								<h5>1989 January - 1999 December</h5>
+								<h5>School-Degree</h5><span></span>
+								<h5>1989 January - 2023 December</h5>
 							</div>
 						<p class="education-description">I hold a Diploma in Computer Application and Business Management, along with a Bachelor’s degree in Commerce (B.Com). I am a certified CCNA and RHCE professional, with additional coursework completed in CCNP, VMware, and AWS. With hands-on experience as a System Administrator since 2011.</p>
 					</div>
