--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="row">
 		<div class="col-md-8 col-sm-12">
 			<div class="education">
-				<h2 class="white">Education</h2>
+				<h2 class="white">Educational</h2>
 					<div class="education-content">
-						<h4 class="education-title accent">New Web Design</h4>
+						<h4 class="education-title accent">Qualifictions</h4>
 							<div class="education-school">
 								<h5>School-Degree</h5><span></span>
 								<h5>1989 January - 2023 December</h5>
@@ -119,7 +119,7 @@ http://www.templatemo.com/tm-467-easy-profile
 		</div>
 		<div class="col-md-8 col-sm-12">
 			<div class="experience">
-				<h2 class="white">Experiences</h2>
+				<h2 class="white">Experience</h2>
 					<div class="experience-content">
 						<h4 class="experience-title accent">LinuxSystem Administration</h4>
 						<h5>Quintetsolutions</h5><span></span>
