--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ http://www.templatemo.com/tm-467-easy-profile
 		<div class="col-md-6 col-sm-12">
 			<div class="about">
 				<h3 class="accent">WELCOME TO</h3>
-				<h2>My personal sample webpage</h2>
-				<p>I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. There are 4 color themes, <a href="index-green.html">Green</a>, <a href="index.html">Blue</a>, <a href="index-gray.html">Gray</a>, and <a href="index-orange.html">Orange</a>. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
+				<h2>My personal Webpage</h2>
+				<p>I'm a passionate Linux System Administrator with over a decade of experience in managing IT infrastructure and server environments. My primary areas of interest include<a href="index-green.html">Linux</a>, <a href="index.html">DevOps</a>, <a href="index-gray.html">System Administration</a>, and <a href="index-orange.html">IT Infrastructure Management</a>. Here, you'll find details about my background, certifications, and professional journey in the world of system administration and DevOps. Thanks for visiting!.</p>
 			</div>
 		</div>
 		<div class="col-md-6 col-sm-12">
